@@ -45,15 +45,18 @@ ECHO_C = @ECHO_C@
 ECHO_N = @ECHO_N@
 ECHO_T = @ECHO_T@
 ## NB, set FC before F77 as on Solaris make, setting FC sets F77
+## FC is the compiler used for free-form Fortran, exts .f90/.f95
 FC = @FC@
+FC_VISIBILITY = @FC_VISIBILITY@
 FCFLAGS = @FCFLAGS@ $(LTO)
+FCPICFLAGS = @FCPICFLAGS@
 ## additional libs needed when linking with $(FC), e.g. on some Oracle compilers
 FCLIBS = @FCLIBS@
+## FC is the compiler used for fixed-form Fortran, ext .f
 F77 = @F77@
 F77_VISIBILITY = @F77_VISIBILITY@
 FFLAGS = @FFLAGS@ $(LTO)
 FLIBS = @FLIBS_IN_SO@
-FCPICFLAGS = @FCPICFLAGS@
 FPICFLAGS = @FPICFLAGS@
 FOUNDATION_CPPFLAGS = @FOUNDATION_CPPFLAGS@
 FOUNDATION_LIBS = @FOUNDATION_LIBS@
